<resources>
    <string name="app_name">ReceiptWallet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_receipt_button">Add new warranty</string>
    <string name="new_warranty_test">NEW WARRANTY UI</string>
    <string name="home_fragment_title">Receipt Wallet</string>
    <string name="expenses_fragment_title">Receipt Wallet</string>
    <string name="camera_fragment_title">Camera</string>
    <string name="gallery_fragment_title">Gallery</string>
    <string name="details_fragment_title">Details</string>
    <string name="new_receipt_fragment_title">New Receipt</string>
    <string name="home_tab">home</string>
    <string name="expense_tab">expense</string>
    <string name="name">Name*</string>
    <string name="enter_name">Enter Name</string>
    <string name="purchase_date">Purchase date*</string>
    <string name="enter_date">Enter Date</string>
    <string name="warranty_length">Warranty length*</string>
    <string name="enter_length">Enter Length (months)</string>
    <string name="categories">Category*</string>
    <string name="choose_category">Select Category</string>
    <string name="cost">Cost*</string>
    <string name="enter_cost">Enter Cost</string>
    <string name="rsd">RSD</string>
    <string name="euro">EURO</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="first_item">First Item</string>
    <string name="time_left_expired">expired</string>
    <string name="date_of_buying">20/10/2023</string>
    <string name="open_camera_dialog">Open Camera</string>
    <string name="upload_picture_dialog">Upload Picture</string>
    <string name="photo_argument">photoLink</string>
    <string name="photo_argument_default_value">noImage</string>
    <string name="dialog_title">Are you sure you want to cancel?</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="invalid_fields">All fields are required</string>
    <string name="image_icon_tag">image_icon</string>
    <string name="image_added_tag">image_added</string>
    <string name="dialog_delete_title">Are you sure you want to delete this item?</string>
    <string name="dialog_discard_title">Are you sure you want to discard your changes?</string>
    <string name="search_button">searchBtn</string>
    <string name="search_field">tfsearch</string>
    <string name="comingSoon">Coming soon...</string>
    <string name="no_results_found">No results found</string>

    <plurals name="time_left_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="time_left_years">
        <item quantity="one">%1$d year and %2$d days</item>
        <item quantity="other">%1$d years and %2$d days</item>
    </plurals>

    <!-- Accessibility id-s -->
    <string name="tvWarrantyLengthLabel">tvWarrantyLengthLabel</string>
    <string name="newPhotoBtn">newPhotoBtn</string>
    <string name="tvNameLabel">tvNameLabel</string>
    <string name="tvName">tvName</string>
    <string name="tvPurchaseDateLabel">tvPurchaseDateLabel</string>
    <string name="dpPurchaseDate">dpPurchaseDate</string>
    <string name="etWarrantyLength">etWarrantyLength</string>
    <string name="tvCategoryLabel">tvCategoryLabel</string>
    <string name="tvCategory">tvCategory</string>
    <string name="tvCostLabel">tvCostLabel</string>
    <string name="etCost">etCost</string>
    <string name="rbRsd">rbRsd</string>
    <string name="rbEuro">rbEuro</string>
    <string name="btnSaveNewReceipt">btnSaveNewReceipt</string>
    <string name="btnCancel">btnCancel</string>
    <string name="tvTimeLeft">tvTimeLeft</string>
    <string name="addNewReceiptBtn">addNewReceiptBtn</string>
    <string name="deleteWarrantyBtn">deleteWarrantyBtn</string>
    <string name="btnSaveChanges">btnSaveChanges</string>
    <string name="exitXBtn">exitXbtn</string>
    <string name="photoBtn">photoBtn</string>
    <string name="btnDiscard">btnDiscard</string>
    <string name="tvCategoryItem">tvCategoryItem</string>
    <string name="recyclerViewCategories">recyclerViewCategories</string>
    <string name="btnPositiveAnswer">btnPositiveAnswer</string>
    <string name="btnNegativeAnswer">btnNegativeAnswer</string>
    <string name="tfSearch">tfsearch</string>
    <string name="searchBtn">searchBtn</string>
    <string name="uploadPictureBtn">uploadPictureBtn</string>
    <string name="openCameraBtn">openCameraBtn</string>
    <string name="closePopupCameraBtn">closePopUpCameraBtn</string>
    <string name="addReceiptPhoto">addReceiptPhoto</string>
    <string name="addReceiptPhotoDetails">addReceiptPhotoDetails</string>
    <string name="photoBtnDetails">photoBtnDetails</string>
    <string name="tvNameLabelDetails">tvNameLabelDetails</string>
    <string name="etNameDetails">etNameDetails</string>
    <string name="tvPurchaseDateLabelDetails">tvPurchaseDateLabelDetails</string>
    <string name="etPurchaseDateDetails">etPurchaseDateDetails</string>
    <string name="tvWarrantyLengthLabelDetails">tvWarrantyLengthLabelDetails</string>
    <string name="etWarrantyLengthDetails">etWarrantyLengthDetails</string>
    <string name="tvCategoryLabelDetails">tvCategoryLabelDetails</string>
    <string name="etCategoriesDetails">etCategoriesDetails</string>
    <string name="tvCostLabelDetails">tvCostLabelDetails</string>
    <string name="etCostDetails">etCostDetails</string>
    <string name="rbRsdDetails">rbRsdDetails</string>
    <string name="rbEuroDetails">rbEuroDetails</string>
    <string name="tvInvalidFieldsLabelDetails">tvInvalidFieldsLabelDetails</string>
    <string name="btnSaveChangesDetails">btnSaveChangesDetails</string>
    <string name="btnDiscardDetails">btnDiscardDetails</string>

</resources>